--- a/tp-3/style.css
+++ b/tp-3/style.css
@@ -21,3 +21,4 @@ h1.titulo{
     font-weight: bold;
     color: #c62 !important;
 }
+/*tengo mis dudas sobre la linea 17,18 y 22. creo que no las realicé de manera correcta.
