--- a/tp-4/style.css
+++ b/tp-4/style.css
@@ -1,5 +1,43 @@
-@media screen and (min-width: 400px) {
+@media (min-width: 400px) {
     body {
-      background-color: rgb(40,60,80);
+        background-color: rgb(40,60,80) !important;
+    }
+}
+@media (max-width: 800px) {
+    h1 {
+      text-align: center;
+    }
+}
+@media (orientation: landscape) {
+    article {
+      max-width: 50ch;
+    }
+}
+@media (min-height: 200px) {
+    h1 {
+        background-color: rgb(186, 186, 212);
+      }
+}
+@media print {
+    p {
+      font-family: serif;
+    }
+}
+/*@media (prefers-color-scheme: light) {
+    body, h1 {
+      color: #111;
+      background-color: #DDD;
+    }
+  } */
+@media not all and (hover: hover) {
+    a {
+      background-color: #212;
+      padding: 2px 5px;
     }
   }
+@media (min-resolution: 2dppx) {
+    article {
+      background-color: #667;
+    }
+}
+/* faltan realizar puntos 6, 8, y 9*/
